# gb-color-emu

./: .gitignore  Cargo.toml  README.md  shell.nix
gb-color-emu/: Cargo.toml
gb-color-emu/benches/: simple.rs
gb-color-emu/src/: cart.rs  cpu.rs  lcd.rs  lib.rs  macros.rs  main.rs  math.rs  mem.rs  pins.rs  screen.rs  system.rs
gb-color-emu/src/cpu/: instr.rs  ppu.rs  tests.rs
gbc-emu/: Cargo.toml
gbc-emu-macros/: Cargo.toml
gbc-emu-macros/src/: lib.rs
gbc-emu/src/: cart.rs  cpu.rs  interval_tree.rs  jit_debug.rs  lcd.rs  lib.rs  main.rs  memory.rs  screen.rs  sound.rs  system.rs
gbc-emu/src/cpu/: debuginfo.rs  gbc_asm.rs  test.rs
gbc-emu/src/screen/: stream.rs
nix/: rust.nix  sources.json
