[package]
name = "gbc-emu-macros"
version = "0.1.0"
authors = ["Cassie Meharry <cassie@prophetessof.tech>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
quote = "1"
